--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,12 @@ body {
 .justify-content-between {
   justify-content: space-between;
 }
+.align-items-center {
+  align-items: center;
+}
+.align-items-start {
+  align-items: flex-start;
+}
 .w-100 {
   width: 100%;
 }
